--- a/patterns/jolla-configuration-onyx.yaml
+++ b/patterns/jolla-configuration-onyx.yaml
@@ -1,14 +1,29 @@
-# Feel free to disable non-critical HA parts during devel by commenting lines out
-# Generated in hadk by executing: rpm/dhd/helpers/add_new_device.sh
-
 Description: Pattern with packages for onyx configurations
 Name: jolla-configuration-onyx
+
 Requires:
 - pattern:jolla-hw-adaptation-onyx
 - pattern:jolla-sailfish-applications
 - pattern:jolla-ui-wayland
+
+# For devices with cellular modem. Those without one, please comment out:
+- pattern:jolla-sailfish-cellular-apps
+
 # Early stages of porting benefit from these:
 - pattern:sailfish-porter-tools
 
-Summary: Jolla Configuration onyx
+- sailfish-content-graphics-z@ICON_RES@
 
+# For multi-SIM devices
+- jolla-settings-networking-multisim
+
+# 3rd party accounts like Twitter, VK, cloud services, etc
+- jolla-settings-accounts-extensions-3rd-party-all
+
+# For Mozilla location services (online)
+- geoclue-provider-mlsdb
+
+# Sailfish OS CSD tool for hardware testing
+- csd
+
+Summary: Jolla Configuration onyx
