--- a/patterns/jolla-hw-adaptation-onyx.yaml
+++ b/patterns/jolla-hw-adaptation-onyx.yaml
@@ -1,13 +1,8 @@
-# Feel free to disable non-critical HA parts during devel by commenting lines out
-# Generated in hadk by executing: rpm/dhd/helpers/add_new_device.sh
-
 Description: Pattern with packages for onyx HW Adaptation
 Name: jolla-hw-adaptation-onyx
 Requires:
-- pattern:jolla-hw-adaptation-hybris
-- pattern:jolla-ui-configuration-onyx
-
 - droid-hal-onyx
+- droid-hal-onyx-detritus
 - droid-hal-onyx-img-boot
 - droid-hal-onyx-kernel-modules
 - droid-config-onyx-sailfish
@@ -15,8 +10,19 @@ Requires:
 - droid-config-onyx-policy-settings
 - droid-config-onyx-preinit-plugin
 - droid-config-onyx-flashing
-- droid-hal-onyx-detritus
+- droid-config-onyx-bluez4
 - droid-hal-version-onyx
+
+# Hybris packages
+- libhybris-libEGL
+- libhybris-libGLESv2
+- libhybris-libwayland-egl
+
+# Sensors
+- hybris-libsensorfw-qt5
+
+# Needed for /dev/touchscreen symlink
+- qt5-plugin-generic-evdev
 
 # vibrator
 - qt5-feedback-haptics-ffmemless
@@ -64,22 +70,11 @@ Requires:
 # enable device lock and allow to select untrusted software
 - jolla-devicelock-plugin-encsfa
 
-# Settings app needs this since update15
-- jolla-settings-layout
-
-# For devices with working cellular modem:
-- pattern:jolla-sailfish-cellular-apps
-- telepathy-ring
-
 # For devices where test_gps eventually gets a fix:
 - geoclue-provider-hybris
-- geoclue-provider-mlsdb
 
 # Mount SD-Card
 - sd-utils
-
-# Multi Sim
-- jolla-settings-networking-multisim
 
 # OnePlus X specific packages
 - triambience
