--- a/sparse/lib/systemd/system/droid-hcismd-up.service
+++ b/sparse/lib/systemd/system/droid-hcismd-up.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=Enable Bluetooth HCI over SMD
-DefaultDependencies=false
-After=jolla-rfkill-hciwait.service
+After=droid-late-start.target
+Before=bluetooth.service
+Conflicts=shutdown.target actdead.target
 
 [Service]
 Type=oneshot
