--- a/sparse/lib/systemd/system/droid-hcismd-up.service
+++ b/sparse/lib/systemd/system/droid-hcismd-up.service
@@ -6,6 +6,7 @@ Conflicts=shutdown.target actdead.target
 
 [Service]
 Type=oneshot
+ExecStartPre=/sbin/modprobe hci_smd
 ExecStart=/bin/sh /usr/bin/droid/droid-hcismd-up.sh
 RemainAfterExit=yes
 
