--- a/sparse/var/lib/environment/compositor/droid-hal-device.conf
+++ b/sparse/var/lib/environment/compositor/droid-hal-device.conf
@@ -1,5 +1,7 @@
 # Config for oneplus/onyx
 EGL_PLATFORM=hwcomposer
 QT_QPA_PLATFORM=hwcomposer
+# Graphics performance improvements
+QPA_HWC_IDLE_TIME=5
 # Determine which node is your touchscreen by checking /dev/input/event*
 LIPSTICK_OPTIONS=-plugin evdevtouch:/dev/input/event4 -plugin evdevkeyboard:keymap=/usr/share/qt5/keymaps/droid.qmap
